interview/asia-yo/practicals/02/k8s/overlayer/prd/route/ingressRoute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: example-product-web-route
  labels:
    app-schema: http
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`asiayo.com`)
    # middlewares:
    # - name: redirect-scheme
    services:
    - name: nginx
      port: http
      scheme: http
  - kind: Rule
    match: Host(`api.asiayo.com`)
    # middlewares:
    # - name: redirect-scheme
    services:
    - name: nodejs
      port: http
      scheme: http
